# pipespin

./: .gitignore  CMakeLists.txt
include/: video.h
source/: video.c
